{
  "version": 4,
  "terraform_version": "0.12.9",
  "serial": 356,
  "lineage": "67fa730d-a0e7-c26c-eaa5-90dedacfbde9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "cosc349_elb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:945403382060:loadbalancer/cosc349-elb",
            "availability_zones": [
              "us-east-1a",
              "us-east-1b"
            ],
            "connection_draining": true,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "dns_name": "cosc349-elb-1936828199.us-east-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:3000/",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "cosc349-elb",
            "idle_timeout": 100,
            "instances": [
              "i-065edaca6f0450a1c",
              "i-09b43ed4d82207233"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 3000,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "cosc349-elb",
            "security_groups": [
              "sg-0b335ceed2bda1187"
            ],
            "source_security_group": "945403382060/cosc349-sg",
            "source_security_group_id": "sg-0b335ceed2bda1187",
            "subnets": [
              "subnet-0b8fcc4377e5d84af",
              "subnet-0d50e3b0570d41068"
            ],
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "depends_on": [
            "aws_instance.app_servers",
            "aws_security_group.app_servers",
            "aws_subnet.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_servers",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04763b3055de4860b",
            "arn": "arn:aws:ec2:us-east-1:945403382060:instance/i-065edaca6f0450a1c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-065edaca6f0450a1c",
            "instance_state": "running",
            "instance_type": "t2.nano",
            "ipv6_address_count": 0,
            "monitoring": false,
            "primary_network_interface_id": "eni-09b1e132d9859efb6",
            "private_dns": "ip-10-20-1-16.ec2.internal",
            "private_ip": "10.20.1.16",
            "public_ip": "3.91.84.139",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-09deaec6508d18a8f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0b335ceed2bda1187"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b8fcc4377e5d84af",
            "tags": {
              "Name": "cosc349_app_0"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0b335ceed2bda1187"
            ]
          },
          "depends_on": [
            "aws_security_group.app_servers",
            "aws_subnet.public"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04763b3055de4860b",
            "arn": "arn:aws:ec2:us-east-1:945403382060:instance/i-09b43ed4d82207233",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-09b43ed4d82207233",
            "instance_state": "running",
            "instance_type": "t2.nano",
            "ipv6_address_count": 0,
            "monitoring": false,
            "primary_network_interface_id": "eni-0764ea6c3a99c8990",
            "private_dns": "ip-10-20-2-210.ec2.internal",
            "private_ip": "10.20.2.210",
            "public_ip": "3.81.209.58",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-096f92afc59c6fa07",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0b335ceed2bda1187"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d50e3b0570d41068",
            "tags": {
              "Name": "cosc349_app_1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0b335ceed2bda1187"
            ]
          },
          "depends_on": [
            "aws_security_group.app_servers",
            "aws_subnet.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "cosc349_ig",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0803d276b6c799c4c",
            "owner_id": "945403382060",
            "vpc_id": "vpc-06fd7fd1813580d84"
          },
          "depends_on": [
            "aws_vpc.cosc349_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-00135daa1141c3646",
            "owner_id": "945403382060",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0803d276b6c799c4c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "vpc_id": "vpc-06fd7fd1813580d84"
          },
          "depends_on": [
            "aws_internet_gateway.cosc349_ig",
            "aws_vpc.cosc349_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0634df64f27aae3fc",
            "route_table_id": "rtb-00135daa1141c3646",
            "subnet_id": "subnet-0b8fcc4377e5d84af"
          },
          "depends_on": [
            "aws_route_table.public_rt",
            "aws_subnet.public"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-024f97e3d52e2e187",
            "route_table_id": "rtb-00135daa1141c3646",
            "subnet_id": "subnet-0d50e3b0570d41068"
          },
          "depends_on": [
            "aws_route_table.public_rt",
            "aws_subnet.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_servers",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:945403382060:security-group/sg-0b335ceed2bda1187",
            "description": "Security group for COSC349 recipes application",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b335ceed2bda1187",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "cosc349-sg",
            "name_prefix": null,
            "owner_id": "945403382060",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-06fd7fd1813580d84"
          },
          "depends_on": [
            "aws_vpc.cosc349_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:945403382060:subnet/subnet-0b8fcc4377e5d84af",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.20.1.0/24",
            "id": "subnet-0b8fcc4377e5d84af",
            "map_public_ip_on_launch": true,
            "owner_id": "945403382060",
            "vpc_id": "vpc-06fd7fd1813580d84"
          },
          "depends_on": [
            "aws_vpc.cosc349_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:945403382060:subnet/subnet-0d50e3b0570d41068",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.20.2.0/24",
            "id": "subnet-0d50e3b0570d41068",
            "map_public_ip_on_launch": true,
            "owner_id": "945403382060",
            "vpc_id": "vpc-06fd7fd1813580d84"
          },
          "depends_on": [
            "aws_vpc.cosc349_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "cosc349_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:945403382060:vpc/vpc-06fd7fd1813580d84",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-0ba5e17081534a6b4",
            "default_route_table_id": "rtb-07472260a73f3cc2b",
            "default_security_group_id": "sg-03c6f9e50c96fead0",
            "dhcp_options_id": "dopt-5570782e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-06fd7fd1813580d84",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-07472260a73f3cc2b",
            "owner_id": "945403382060"
          }
        }
      ]
    }
  ]
}